force-app/main/default/objects/tspa__MiniDashboard_API_Details__c/fields/tspa__Add_Community_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>tspa__Add_Community_Endpoint__c</fullName>
    <formula>IF( NOT(ISBLANK(tspa__Domain_Name__c)),tspa__apiURL__c+&apos;/public/community&apos;,&apos;&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Add Community Endpoint</label>
    <type>Text</type>
</CustomField>