force-app/main/default/objects/tspa__MiniDashboard_API_Details__c/fields/tspa__Backup_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>tspa__Backup_Endpoint__c</fullName>
    <formula>tspa__apiURL__c +&apos;/public/accounts/backup&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Backup Endpoint</label>
    <type>Text</type>
</CustomField>