force-app/main/default/objects/tspa__MiniDashboard_API_Details__c/fields/tspa__createUserEndpoint__c.field-meta.xml
<CustomField>
    <fullName>tspa__createUserEndpoint__c</fullName>
    <formula>IF( NOT(ISBLANK(tspa__Domain_Name__c)),tspa__apiURL__c+&apos;/public/users&apos;,
&apos;&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>createUserEndpoint</label>
    <type>Text</type>
</CustomField>