force-app/main/default/objects/tspa__MiniDashboard_API_Details__c/fields/tspa__DeleteImagesUrl__c.field-meta.xml
<CustomField>
    <fullName>tspa__DeleteImagesUrl__c</fullName>
    <formula>IF( NOT(ISBLANK(tspa__statsApiUrl__c)), tspa__statsApiUrl__c+&apos;/api/v2/history/resourceDelete&apos;, &apos;&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delete Images URL</label>
    <type>Text</type>
</CustomField>