force-app/main/default/objects/tspa__MiniDashboard_API_Details__c/fields/tspa__FaceMeet_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>tspa__FaceMeet_Endpoint__c</fullName>
    <formula>IF(NOT(ISBLANK(tspa__Domain_Name__c)),tspa__apiURL__c+&apos;/public/accounts/{accountId}/faceMeet/{action}&apos;,&apos;&apos;)</formula>
    <label>FaceMeet Endpoint</label>
    <type>Text</type>
</CustomField>