force-app/main/default/objects/tspa__MiniDashboard_API_Details__c/fields/tspa__FeatureStatus__c.field-meta.xml
<CustomField>
    <fullName>tspa__FeatureStatus__c</fullName>
    <formula>tspa__apiURL__c +&apos;/public/accounts/featureStatus&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FeatureStatus</label>
    <type>Text</type>
</CustomField>