force-app/main/default/objects/tspa__MiniDashboard_API_Details__c/fields/tspa__Import_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>tspa__Import_Endpoint__c</fullName>
    <formula>tspa__apiURL__c +&apos;/public/accounts/import&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Import Endpoint</label>
    <type>Text</type>
</CustomField>