force-app/main/default/objects/tspa__MiniDashboard_API_Details__c/fields/tspa__MobileSdkStateEndpoint__c.field-meta.xml
<CustomField>
    <fullName>tspa__MobileSdkStateEndpoint__c</fullName>
    <formula>IF( NOT(ISBLANK(tspa__apiURL__c)), tspa__apiURL__c + &apos;/public/accounts/{0}/customMobileSDK&apos;, &apos;&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile Sdk State Endpoint</label>
    <type>Text</type>
</CustomField>