force-app/main/default/objects/tspa__MiniDashboard_API_Details__c/fields/tspa__Restore_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>tspa__Restore_Endpoint__c</fullName>
    <formula>tspa__apiURL__c +&apos;/public/accounts/restore&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Restore Endpoint</label>
    <type>Text</type>
</CustomField>