force-app/main/default/objects/tspa__MiniDashboard_API_Details__c/fields/tspa__Revoke_Account_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>tspa__Revoke_Account_Endpoint__c</fullName>
    <formula>IF ( NOT(ISBLANK(tspa__Domain_Name__c)), &apos;https://&apos; + tspa__Domain_Name__c + &apos;-api.techsee.me/public/accounts/markAccountForRevocation&apos;, &apos;&apos;)</formula>
    <label>Revoke Account Endpoint</label>
    <type>Text</type>
</CustomField>