force-app/main/default/objects/tspa__MiniDashboard_API_Details__c/fields/tspa__Session_Recording_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>tspa__Session_Recording_Endpoint__c</fullName>
    <formula>tspa__apiURL__c+&apos;/public/recording&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Session Recording Endpoint</label>
    <type>Text</type>
</CustomField>