force-app/main/default/objects/tspa__MiniDashboard_API_Details__c/fields/tspa__ShareFile__c.field-meta.xml
<CustomField>
    <fullName>tspa__ShareFile__c</fullName>
    <formula>IF( NOT(ISBLANK(tspa__Domain_Name__c)),tspa__apiURL__c+&apos;/v2/public/sign&apos;,
&apos;&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ShareFile</label>
    <type>Text</type>
</CustomField>