force-app/main/default/objects/tspa__MiniDashboard_API_Details__c/fields/tspa__SSO_URL_1__c.field-meta.xml
<CustomField>
    <fullName>tspa__SSO_URL_1__c</fullName>
    <formula>IF ( NOT(ISBLANK(tspa__Domain_Name__c)), &apos;https://&apos; + tspa__Domain_Name__c + &apos;.techsee.me&apos;, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SSO URL</label>
    <type>Text</type>
</CustomField>