force-app/main/default/objects/tspa__MiniDashboard_API_Details__c/fields/tspa__Store_Configuration_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>tspa__Store_Configuration_Endpoint__c</fullName>
    <formula>&apos; https://&apos;+  tspa__Domain_Name__c  +&apos;-api.techsee.me/public/accounts/&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Store Configuration Endpoint</label>
    <type>Text</type>
</CustomField>