force-app/main/default/objects/tspa__MiniDashboard_API_Details__c/fields/tspa__UserTokenEndpoint__c.field-meta.xml
<CustomField>
    <fullName>tspa__UserTokenEndpoint__c</fullName>
    <formula>tspa__apiURL__c+&apos;/public/auth&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UserTokenEndpoint</label>
    <type>Text</type>
</CustomField>